--- a/resources/css/zahlungen/index.css
+++ b/resources/css/zahlungen/index.css
@@ -60,7 +60,6 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    width: 100vw;
 }
 
 .btn-icon {
